2009-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_main.c: make 'synctex help update' work as advertised.
	* tests/LM-Volume-manuscript.tex: Mac -> native line ends.

2009-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: distribute new files.
	* synctex_parser_local.h: add newline at end of file.
	* synctex_parser_readme.txt: Mac -> native line ends.

2009-07-08  Jerome Laurens  <jerome.laurens@u-bourgogne.fr>

	Updated version.

2009-03-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to TL2009 build system.
